add digital signature option

--- a/k-9-main/app/ui/legacy/src/main/res/layout/message_compose_content.xml
+++ b/k-9-main/app/ui/legacy/src/main/res/layout/message_compose_content.xml
@@ -61,6 +61,29 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/isSign"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Signature" />
+
+            <EditText
+                android:id="@+id/privateKeySignature"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="Key"
+                android:inputType="textPersonName"
+                android:textColorHint="#8F8F8F" />
+        </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
