remove static private key in signature

--- a/k-9-main/app/ui/legacy/src/main/res/layout/message_compose_content.xml
+++ b/k-9-main/app/ui/legacy/src/main/res/layout/message_compose_content.xml
@@ -29,7 +29,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:hint="judul"
+                android:hint="Subject"
                 android:imeOptions="actionNext|flagNoExtractUi"
                 android:inputType="textEmailSubject|textAutoCorrect|textCapSentences"
                 android:paddingTop="10dp"
