--- a/k-9-main/app/ui/legacy/src/main/res/values/attrs.xml
+++ b/k-9-main/app/ui/legacy/src/main/res/values/attrs.xml
@@ -29,6 +29,7 @@
         <attr name="iconActionSearchFolder" format="reference" />
         <attr name="iconActionSend" format="reference" />
         <attr name="iconActionSettings" format="reference" />
+        <attr name="iconActionGenerateKey" format="reference" />
         <attr name="iconActionSort" format="reference" />
         <attr name="iconActionSpam" format="reference" />
         <attr name="iconActionFlag" format="reference" />
