--- a/k-9-main/app/ui/legacy/src/main/res/layout/activity_generate_key.xml
+++ b/k-9-main/app/ui/legacy/src/main/res/layout/activity_generate_key.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,15 +33,34 @@
         android:layout_marginRight="10dp"
         />
 
-    <TextView
-        android:id="@+id/textViewPublicKey"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your public key will be displayed here"
-        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        />
+        android:layout_marginRight="10dp">
+
+        <TextView
+            android:id="@+id/textViewPublicKey"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Your public key will be displayed here"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/buttonCopyPublicKey"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/buttonCopyPublicKey"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="copyPublicKey"
+            android:text="Copy"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
