--- a/k-9-main/app/ui/legacy/src/main/res/layout/activity_generate_key.xml
+++ b/k-9-main/app/ui/legacy/src/main/res/layout/activity_generate_key.xml
@@ -14,7 +14,7 @@
         android:id="@+id/editViewPrivateKey"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textCapCharacters"
+        android:inputType="text"
         android:ems="10"
         android:hint="Enter your private key here"
         android:layout_marginTop="10dp"
@@ -33,34 +33,23 @@
         android:layout_marginRight="10dp"
         />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textViewPublicKey"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Your public key will be displayed here"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_marginRight="10dp" />
 
-        <TextView
-            android:id="@+id/textViewPublicKey"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Your public key will be displayed here"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/buttonCopyPublicKey"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/buttonCopyPublicKey"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="copyPublicKey"
-            android:text="Copy"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/buttonCopyPublicKey"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="copyPublicKey"
+        android:text="Copy"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp" />
 
 </LinearLayout>
