--- a/k-9-main/app/ui/legacy/src/main/res/values/themes.xml
+++ b/k-9-main/app/ui/legacy/src/main/res/values/themes.xml
@@ -218,6 +218,7 @@
         <item name="iconActionSearchFolder">@drawable/ic_folder_magnify</item>
         <item name="iconActionSend">@drawable/ic_send</item>
         <item name="iconActionSettings">@drawable/ic_cog</item>
+        <item name="iconActionGenerateKey">@drawable/ic_key</item>
         <item name="iconActionSort">@drawable/ic_sort</item>
         <item name="iconActionSpam">@drawable/ic_alert_octagon</item>
         <item name="iconActionFlag">@drawable/ic_star</item>
